# cdx-manager

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  install.ps1  install.sh  package.json  pyproject.toml
.github/workflows/: ci.yml  publish-npm.yml  publish-pypi.yml
changelogs/: CHANGELOGS_0_1_1.md  CHANGELOGS_0_2_0.md  CHANGELOGS_0_2_1.md  CHANGELOGS_0_3_0.md  CHANGELOGS_0_3_1.md  CHANGELOGS_0_3_2.md  CHANGELOGS_0_3_3.md  CHANGELOGS_0_3_4.md  CHANGELOGS_0_4_0.md  CHANGELOGS_0_4_1.md  CHANGELOGS_0_4_2.md  CHANGELOGS_0_4_3.md  CHANGELOGS_0_4_4.md
checksums/: release-archives.json
logics/: instructions.md
logics/architecture/: adr_000_persist_and_restore_cdx_sessions.md
logics/backlog/: item_000_cdx_core_session_manager.md  item_001_persistent_codex_session_storage_and_rehydration.md  item_002_multi_provider_session_support_for_codex_and_claude.md  item_003_command_ergonomics_validation_and_safety.md  item_004_cdx_status_global_session_overview.md  (+1 more)
scripts/: update_release_checksums.py
src/: __init__.py  backup_bundle.py  claude-usage.js  claude_refresh.py  claude_usage.py  cli.js  cli.py  cli_commands.py  cli_render.py  config.js  config.py  errors.js  errors.py  health.py  index.js  notify.py  provider_runtime.py  repair.py  session-service.js  session-store.js  session_service.py  session_store.py  status-source.js  status_source.py  status_view.py  update_check.py  update_manager.py
test/: cli.test.js  session-service.test.js  test_cli_py.py  test_runtime_py.py  test_session_service_py.py  test_update_manager_py.py
(+13 files in other folders)
